--- a/DEMO003/html/Login.html
+++ b/DEMO003/html/Login.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <title></title>
         <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-        <link rel="stylesheet" href="/smartbase/css/mui.min.css" />
-        <link rel="stylesheet" href="/smartbase/css/custom.july.css" />
-        <link rel="stylesheet" href="/smartbase/fonts/iconfont.css" />
+        <link rel="stylesheet" href="../css/mui.min.css" />
+        <link rel="stylesheet" href="../css/custom.july.css" />
+        <link rel="stylesheet" href="../fonts/iconfont.css" />
     </head>
     <body style="background: #fff;">
         <div class="mui-content ju-login-wrap">
