--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<title>一些小小示例</title>
 	</head>
 	<body>
 		<a href="DEMO001/index.html">示例1</a>
 		<a href="DEMO002/index.html">示例2</a>
 		<a href="DEMO003/html/Login.html">示例3</a>
-		<a href="DEMO004/html/login.html">示例4</a>
+		<a href="DEMO004/html/Login.html">示例4</a>
 	</body>
 </html>
