--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 				<div class='cont'>
 					<img src="bg-01.png"/>
 					<p>一个完整逻辑站点；展示了列表、详情、部分列表操作；本地JSON数据读取；内有高德地图和ECharts应用场景。<br />
+						前后端分离开发，前端使用Vue+Vux+vue-router+axios+vuex搭建。<br />
 						<a href="DEMO001/index.html" target="_blank">访问站点 &gt;</a><br />
 						<a href="001000.gif" target="_blank">截图预览 &gt;</a>
 					</p>
@@ -18,7 +19,8 @@
 			<div class='item'>
 				<div class='cont'>
 					<img src="bg-02.png"/>
-					<p>一个适用于微信公众号的网页服务，展示了列表、详情、部分列表操作<br />
+					<p>一个适用于微信公众号的网页服务，展示了列表、详情、部分列表操作。<br />
+						前后端分离开发，前端使用Vue+Vux+vue-router+axios+vuex搭建。<br />
 						<a href="DEMO002/index.html" target="_blank">访问站点 &gt;</a><br />
 						<a href="002000.gif" target="_blank">截图预览 &gt;</a>
 					</p>
@@ -28,6 +30,7 @@
 				<div class='cont'>
 					<img src="bg-03.png"/>
 					<p>一个完整逻辑的站点，用于操作实际硬件，并将操作和结果以动画反馈和动画展示。<br />
+						前后端分离开发，前端使用Mui+template等进行开发。<br />
 						<a href="DEMO003/html/Login.html" target="_blank">访问站点 &gt;</a><br />
 						<a href="003000.gif" target="_blank">截图预览 &gt;</a>
 					</p>
@@ -37,6 +40,7 @@
 				<div class='cont'>
 					<img src="bg-04.png"/>
 					<p>一个完整逻辑的站点；展示了列表、详情、部分列表操作、表单填写、效果展现等。<br />
+						前后端分离开发，前端使用Mui+template等进行开发。<br />
 						<a href="DEMO004/html/Login.html" target="_blank">访问站点 &gt;</a><br />
 						<a href="004000.gif" target="_blank">截图预览 &gt;</a>
 					</p>
